<resources>
    <string name="app_name">RegisterPage_Garcia</string>
    <string name="fname">full name</string>
    <string name="uname">username</string>
    <string name="email">email</string>
    <string name="pass_hint">password</string>
    <string name="retype_pass">retype password</string>
    <string name="signup_btn">Sign up</string>
    <string name="or_signup">or sign up with</string>
    <string name="goto_signin">Already a member? Sign in</string>
</resources>